--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@neondatabase/serverless": "^0.10.4",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@stripe/stripe-react-native": "^0.41.0",
     "expo": "~52.0.32",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.5",
@@ -39,7 +40,7 @@
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "^0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
@@ -52,6 +53,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "stripe": "^17.6.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -69,7 +71,8 @@
     "prettier": "^3.5.0",
     "react-test-renderer": "18.3.1",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "@react-native-community/cli": "latest"
   },
   "private": true
 }
