--- a/package.json
+++ b/package.json
@@ -22,16 +22,17 @@
     "@neondatabase/serverless": "^0.10.4",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@stripe/stripe-react-native": "^0.38.6",
     "expo": "~52.0.32",
     "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.5",
+    "expo-constants": "~17.0.6",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
     "expo-location": "^18.0.6",
     "expo-router": "~4.0.17",
     "expo-secure-store": "^14.0.1",
-    "expo-splash-screen": "~0.29.21",
+    "expo-splash-screen": "^0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
@@ -39,23 +40,26 @@
     "nativewind": "^2.0.11",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "^0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
-    "react-native-maps": "^1.20.1",
+    "react-native-maps": "^1.18.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-stripe": "^1.2.2",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "stripe": "^17.6.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "latest",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
@@ -65,7 +69,7 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.3",
+    "jest-expo": "~52.0.4",
     "prettier": "^3.5.0",
     "react-test-renderer": "18.3.1",
     "tailwindcss": "^3.3.2",
